Update reflection usage